--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
     <!-- css link -->
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     <!-- moment.js script link -->
-    <script src="traintimes.js"></script>
-    <!--javascript link -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- jquery script -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <!-- bootstrap css link -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- jquery script -->
 </head>
 
 <body>
@@ -31,7 +29,7 @@
                         </h1>
                         <hr class="my-4">
                         <p class="lead" id="header-subtext">
-                            some more train stuff!
+                            some more train text!
                         </p>
                     </div>
                 </div>
@@ -40,50 +38,170 @@
     </div>
     <!-- all of the divs and stuff for my jumbotron header -->
 
-    <div class="col-lg-12">
-        <div class="card card-default">
-            <div class="card-header">
-                Add a Train
+    <div class="row" id="trainCard">
+        <div class="col-md-12">
+            <div class="card card-default">
+                <div class="card-header">
+                    Train Schedule!
+                </div>
+                <div class="card-body">
+                    <div id="full-train-list">
+                        <div class="row">
+                            <div class="col-md-3" id="trainCard-trainName">
+                                <h6>Train</h6>
+                            </div>
+                            <div class="col-md-3" id="trainCard-trainDestination">
+                                <h6>Destination</h6>
+                            </div>
+                            <div class="col-md-2" id="trainCard-frequency">
+                                <h6>Frequency (min)</h6>
+                            </div>
+                            <div class="col-md-2" id="trainCard-nextArrival">
+                                <h6>Next Arrival</h6>
+                            </div>
+                            <div class="col-md-2" id="trainCard-minutesAway">
+                                <h6>Minutes Away</h6>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-3" id="train-append">
+                            </div>
+                            <div class="col-md-3" id="destination-append">
+                            </div>
+                            <div class="col-md-2" id="frequency-append">
+                            </div>
+                            <div class="col-md-2" id="arrival-append">
+                            </div>
+                            <div class="col-md-2" id="minutesAway-append">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="card-body">
-
-                <!-- Sign-up Form (note the various input "types")-->
-
-                <form role="form">
-                    <div class="form-group row">
-                        <label for="train-input">Train:</label>
-                        <input class="form-control" id="train-input" type="text">
-                    </div>
-                    <div class="form-group row">
-                        <label for="destination-input">Destination:</label>
-                        <input class="form-control" id="destination-input" type="text">
-                    </div>
-                    <div class="form-group row">
-                        <label for="trainTime-input">First Train Time: (HH:mm - military time)</label>
-                        <input class="form-control" id="trainTime-input" type="text">
-                        <!-- may need to switch the type to numbers or something -->
-                    </div>
-                    <div class="form-group row">
-                        <label for="frequency-input">Frequency: (minutes)</label>
-                        <input class="form-control" id="frequency-input" type="number">
-                    </div>
-                    <button class="btn btn-default" id="add-train" type="submit">Submit</button>
-                </form>
-
-            </div>
-
         </div>
+    </div>
+    <!-- where I will append my trains info -->
+
+    <div class="row" id="trainCard">
+        <div class="col-md-12" id="empty">
+        </div>
+    </div>
+    <!-- empty div for space -->
+
+    <div class="row" id="trainCard">
+        <div class="col-md-12">
+            <div class="card card-default">
+                <div class="card-header">
+                    Add a Train
+                </div>
+                <div class="card-body">
+
+                    <!-- Sign-up Form (note the various input "types")-->
+
+                    <form role="form">
+                        <div class="form-group row">
+                            <label for="train-input">Train:</label>
+                            <input class="form-control" id="train-input" type="text">
+                        </div>
+                        <div class="form-group row">
+                            <label for="destination-input">Destination:</label>
+                            <input class="form-control" id="destination-input" type="text">
+                        </div>
+                        <div class="form-group row">
+                            <label for="trainTime-input">First Train Time: (HH:mm - military time)</label>
+                            <input class="form-control" id="trainTime-input" type="number/text">
+                            <!-- may need to switch the type to numbers or something -->
+                        </div>
+                        <div class="form-group row">
+                            <label for="frequency-input">Frequency: (minutes)</label>
+                            <input class="form-control" id="frequency-input" type="number">
+                        </div>
+                        <button class="btn btn-default" id="add-train" type="submit">Submit</button>
+                    </form>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase.js"></script>
+    <!-- FIREBASE -->
+
+    <script>
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyD2z9S5risXs8SUC8-PKVkdnxrZPzAVktU",
+            authDomain: "inclass-firebase1.firebaseapp.com",
+            databaseURL: "https://inclass-firebase1.firebaseio.com",
+            projectId: "inclass-firebase1",
+            storageBucket: "inclass-firebase1.appspot.com",
+            messagingSenderId: "87680051169"
+        };
+        firebase.initializeApp(config);
+
+        var database = firebase.database();
+        // creating a variable for my firebase DB
+
+        // initial values
+        var trainName = "";
+        var destination = "";
+        var frequency = "";
+        // in minutes
+        var nextArrival = "";
+        // dont know if i need to set this var or not
+        var minutesAway = "";
+        // dont know if i need to set this var either
+
+        // capture button clicks
+        $("#add-train").on("click", function (event) {
+            event.preventDefault();
+
+            trainName = $("#train-input").val().trim();
+            destination = $("#destination-input").val().trim();
+            trainTime = $("#trainTime-input").val().trim();
+            frequency = $("#frequency-input").val().trim();
+
+            database.ref().push({
+                trainName: trainName,
+                destination: destination,
+                trainTime: trainTime,
+                frequency: frequency,
+                dateAdded: firebase.database.ServerValue.TIMESTAMP
+            });
+
+        });
+
+        database.ref().on("child_added", function (snapshot) {
+            var sv = snapshot.val();
+
+            console.log(sv.trainName);
+            console.log(sv.destination);
+            console.log(sv.trainTime);
+            console.log(sv.frequency);
+
+            $("#train-append").append("<p id='append'>" + sv.trainName + "</p>");
+            $("#destination-append").append("<p id='append'>" + sv.destination + "</p>")
+            $("#frequency-append").append("<p id='append'>" + sv.frequency + "</p>");
+            $("#arrival-append").append()
+            $("#minutesAway-append").append()
+        });
 
 
-        <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase.js"></script>
-        <!-- FIREBASE -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-            crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-            crossorigin="anonymous"></script>
-        <!-- bootstrap scripting -->
+
+
+    </script>
+
+
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+    <!-- bootstrap scripting -->
 </body>
 
 </html>
